--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Archive-Zip
 
 
+1.39 Tue 21 Oct 2014
     - store test data in temp dirs to fix parallelism and shuffling
       [Graham Knop]
 
