Updates for -T testing, cleanup, still working on the 2 failing tests that appear to result as a side effect of temp directories involving /testdir/TESTDIR on linux or /testdir/testdir on windows (the second subfolder /TESTDIR or /testdir is a result of one of the /examples scripts extracting to the wrong directory).

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension Archive-Zip
 
 
+    - Some work on making tests pass with -T
+    - Fix problem with Strawberry Perl file permissions with last updates temp dirs
+
 1.39 Tue 21 Oct 2014
     - store test data in temp dirs to fix parallelism and shuffling
       [Graham Knop]
