https://rt.cpan.org/Public/Bug/Display.html?id=92205 [cpan/PMQS]

--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 Revision history for Perl extension Archive-Zip
 
-1.40
-    - https://rt.cpan.org/Public/Bug/Display.html?id=101092 [PMQS]
+1.40 Sun 04 Jan 2015
+    - https://rt.cpan.org/Public/Bug/Display.html?id=92205 [cpan/PMQS]
+    - https://rt.cpan.org/Public/Bug/Display.html?id=101092 [cpan/PMQS]
 
 1.39 Tue 21 Oct 2014
     - store test data in temp dirs to fix parallelism and shuffling
