--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Archive-Zip
 
+1.45 Mon 26 Jan 2015
+    - FreeBSD unzip sets $? to 0 for empty zip file [github.com/revhippie]
+
+1.44 Fri 23 Jan 2015
+    - Win32 with ZIP executable cannot create temp file [github.com/revhippie]
+
 1.43 Wed 14 Jan 2015
     - Restore 101374 - failing tests were not regressions.
 
