--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension Archive-Zip
 
+1.49 Fri 31 Jul 2015
+    - Fails on unseekable file handle after desiredCompressionLevel(), RT #54827
+    - Upgrade build tools to avoid tar warnings, RT #105547
+
+1.48 Thu 18 Jun 2015
+    - Wrap skip in a SKIP: block [github/plicease]
+
 1.47 Wed 17 Jun 2015
     - zip file with a deflated directory cannot be written out again [github/ntyni]
     - add missing test data to MANIFEST
