--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Archive-Zip
 
+1.62 Sun 19 Aug 2018
+    - Add link-samename.zip to MANIFEST
+
 1.61 Sat 18 Aug 2018
     - File::Find will not untaint [github/ThisUsedToBeAnEmail]
     - Prevent from traversing symlinks and parent directories when extracting [github/ppisar]
