Remove use lib from script/crc32
Resolves #42

That script is going to be install and
should use default @INC values from Perl
to load the modules.

When run from this repo manually, it's recommended
to use -Ilib.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension Archive-Zip
 
+    - Do not load modules from unsafe directories
+
 1.64 Wed 12 Sep 2018
     - Fix for year 2030
 
