--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension Archive-Zip
 
+1.67 Sat 28 Sep 2019
+    - Fixed compatibility issues with zip64 format (defined-or, pack)
+    - Fixed hard-coded version fields introduced in version 1.66
+    - Fixed merge glitch with tests 26 and 27
+    - Fixed merge glitch with bzip passthrough
+    - Updated bzip test file to avoid zip bomb detection
+
 1.66 Mon 16 Sep 2019
     - Refactored low-level methods for reading and writing zip files
       in zip64 format.  Added new parameters and return values to
